fixing card overlap

--- a/docs/flashquiz_styles.css
+++ b/docs/flashquiz_styles.css
@@ -225,7 +225,6 @@ html, body {
     justify-content: center;
     align-items: center;
     font-size: 1.3em;
-    padding: 25px;
   }
 
   .flashcard .front {
